Change history for libwww-perl

{{$NEXT}}

6.39      2019-05-06 14:18:39Z
    - Document current best practices (GH#314) (Olaf Alders)
    - Document order in which handlers fire (GH#315) (Olaf Alders)
    - SKIP nntp test for now (GH#317) (Olaf Alders)

6.38      2019-03-25 18:58:58Z
    - Update Net::HTTP dependency from 6.07 to 6.18 (GH#310) (Olaf Alders)
    - Remove s.c.o. from SYNOPSIS (GH#308) (Olaf Alders)

6.37      2019-03-06 20:49:26Z
    - Improve ->add_handler documentation (GH #272) (Julien Fiegehenn)
    - Alter our rule set to allow IPv6 proxy hosts beginning with [. (GH #237)
    - Add a jigsaw test for 307 redirects (GH#285) (Nik LaBelle)

6.36      2018-10-10 02:20:58Z
    - fix broken link https://metacpan.org/pod/LWP::Simple by fixing pod
      header (thanks for the report, traumschule!)

6.35      2018-07-16 04:48:54Z
    - fix file descriptor leak in LWP::Protocol (introduced in version 6.17)
      that occurs for perl versions earlier than 5.18. (GH #296)

6.34      2018-06-05 18:48:59Z
    - timeout() documentation has more details about the response (thanks,
      Andrew Grangaard!)
    - HTTP::Status is now upgraded to 6.18 if 6.17 is installed (which had a
      bug).

6.33      2018-02-27 03:51:36Z
    - Fix send_te change from previous release, which was breaking
      LWP::Parallel::UserAgent and Test::Override::UserAgent (GH #281) (Doug
      Bell)

6.32      2018-02-20 19:39:20Z
    - Suggest LWP::ConsoleLogger as an alternative to the deprecated LWP::Debug
      (GH#278) (Olaf Alders)
    - add send_te configuration to disable sending the TE header (GH#126)
      (Doug Bell)
    - Added a developer feature to the http.t tests. (GH#257) (colinnewell)

6.31      2017-12-11 01:55:53Z
    - fix version numbering (RT#123841)

6.30      2017-12-07
    - Use tr/// instead of s/// where appropriate (Ville Skyttä) (GH #265)
    - Use parent -norequire instead of base to not look for external
      dependencies (Fabian Zeindler) (GH #259)