@@ -490,6 +490,24 @@ sub head {
 }
 
 
+sub patch {
+    require HTTP::Request::Common;
+    my($self, @parameters) = @_;
+    my @suff = $self->_process_colonic_headers(\@parameters, (ref($parameters[1]) ? 2 : 1));
+    my $patch_ver_ok = eval {HTTP::Request->VERSION("6.12");};
+    my $req;
+    if ($patch_ver_ok) {
+        $req = HTTP::Request::Common::PATCH(@parameters);
+    }
+    else {
+        # older versions had PUT but not PATCH. ugh
+        $req = HTTP::Request::Common::PUT(@parameters);
+        $req->method('PATCH');
+    }
+    $self->_maybe_copy_default_content_type($req, @parameters);
+    return $self->request($req, @suff);
+}
+
 sub put {
     require HTTP::Request::Common;
     my($self, @parameters) = @_;
@@ -1871,6 +1889,34 @@ will be downloaded again.  The modification time of the file will be
 forced to match that of the server.
 
 The return value is an L<HTTP::Response> object.
+
+=head2 patch
+
+    # Any version of HTTP::Message works with this form:
+    my $res = $ua->patch( $url, $field_name => $value, Content => $content );
+
+    # Using hash or array references requires HTTP::Message >= 6.12
+    use HTTP::Request 6.12;
+    my $res = $ua->patch( $url, \%form );
+    my $res = $ua->patch( $url, \@form );
+    my $res = $ua->patch( $url, \%form, $field_name => $value, ... );
+    my $res = $ua->patch( $url, $field_name => $value, Content => \%form );
+    my $res = $ua->patch( $url, $field_name => $value, Content => \@form );
+
+This method will dispatch a C<PATCH> request on the given URL, with
+C<%form> or C<@form> providing the key/value pairs for the fill-in form
+content. Additional headers and content options are the same as for
+the L<LWP::UserAgent/get> method.
+
+CAVEAT:
+
+This method can only accept content that is in key-value pairs when using
+L<HTTP::Request::Common> prior to version C<6.12>. Any use of hash or array
+references will result in an error prior to version C<6.12>.
+
+This method will use the C<PATCH> function from L<HTTP::Request::Common>
+to build the request.  See L<HTTP::Request::Common> for a details on
+how to pass form content and other advanced features.
 
 =head2 post
 
