@@ -4,7 +4,7 @@ use Test::More;
 
 use LWP::UserAgent;
 use HTTP::Request ();
-plan tests => 4;
+plan tests => 6;
 
 # Prevent environment from interfering with test:
 delete $ENV{PERL_LWP_SSL_VERIFY_HOSTNAME};
@@ -17,8 +17,9 @@ delete $ENV{PERL_LWP_ENV_PROXY};
 # we can only use HTTP::Request >= 6.07
 my $ver = $HTTP::Request::VERSION || '6.00';
 my $ver_ok = eval {HTTP::Request->VERSION("6.07");};
-diag "Some tests for the PUT method can only be run on ";
-diag "HTTP::Request version 6.07 or higher.";
+my $patch_ver_ok = eval {HTTP::Request->VERSION("6.12");};
+diag "Some tests for the PUT/PATCH methods can only be run on ";
+diag "HTTP::Request version 6.07/6.12 or higher.";
 diag "If your version isn't good enough, we'll skip those.";
 diag "Your version is $ver and that's ". ($ver_ok ? '' : 'not '). 'good enough';
 
@@ -30,6 +31,27 @@ my $ua = LWP::UserAgent->new;
 $ua->default_header('Content-Type' => 'application/json');
 $ua->proxy(http => "loopback:");
 $ua->agent("foo/0.1");
+
+# These forms will all be x-www-form-urlencoded
+subtest 'PATCH x-www-form-urlencoded' => sub {
+    plan skip_all => "HTTP::Request version not high enough" unless $patch_ver_ok;
+    plan tests => 4;
+    for my $arg (
+        [ { cat => 'dog' }             ],
+        [ [ cat => 'dog' ]             ],
+        [ Content => { cat => 'dog' }, ],
+        [ Content => [ cat => 'dog' ], ],
+    ) {
+        is ($ua->patch($url, @$arg)->content, <<"EOT", "patch @$arg");
+PATCH http://www.example.com
+User-Agent: foo/0.1
+Content-Length: 7
+Content-Type: application/x-www-form-urlencoded
+
+cat=dog
+EOT
+    }
+};
 
 # These forms will all be x-www-form-urlencoded
 subtest 'PUT x-www-form-urlencoded' => sub {
@@ -73,7 +95,7 @@ EOT
 };
 
 # These should all use the default
-for my $call (qw(post put)) {
+for my $call (qw(post put patch)) {
     my $ucall = uc $call;
 
     my $arg = [ Content => '{"cat":"dog"}' ];
