@@ -4,7 +4,7 @@ use HTTP::Request ();
 use LWP::UserAgent ();
 use Test::More;
 
-plan tests => 41;
+plan tests => 42;
 
 # Prevent environment from interfering with test:
 delete $ENV{PERL_LWP_SSL_VERIFY_HOSTNAME};
@@ -94,6 +94,18 @@ EOT
 
 ok($ua->put("http://www.example.com", [x => "y", f => "ff"])->content, <<EOT);
 PUT http://www.example.com
+User-Agent: foo/0.1
+Content-Length: 8
+Content-Type: application/x-www-form-urlencoded
+Foo: bar
+Multi: 1
+Multi: 2
+
+x=y&f=ff
+EOT
+
+ok($ua->patch("http://www.example.com", [x => "y", f => "ff"])->content, <<EOT);
+PATCH http://www.example.com
 User-Agent: foo/0.1
 Content-Length: 8
 Content-Type: application/x-www-form-urlencoded
